--- a/assets/templates/test/index.html
+++ b/assets/templates/test/index.html
@@ -7,7 +7,8 @@
   <title>CryptoLogic</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/media.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet"> -->
 </head>
 <body>
   <header class="page-header">
@@ -150,33 +151,33 @@
           <b>Account</b>
           <ul>
             <li><a href="#">Log In</a></li>
-            <li><a href="#">Sign Up</a></li> 
+            <li><a href="#">Sign Up</a></li>
           </ul>
         </div>
         <div class="page-footer__column">
           <b>About</b>
           <ul>
             <li><a href="#">About Us</a></li>
-            <li><a href="#">Careers</a></li> 
-            <li><a href="#">Press</a></li> 
-            <li><a href="#">Contact</a></li> 
-            <li><a href="#">Legal & Privacy</a></li> 
-            <li><a href="#">Security</a></li> 
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Press</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Legal & Privacy</a></li>
+            <li><a href="#">Security</a></li>
           </ul>
         </div>
         <div class="page-footer__column">
           <b>Resources</b>
           <ul>
             <li><a href="#">FAQ</a></li>
-            <li><a href="#">Charts</a></li> 
-            <li><a href="#">Blog</a></li> 
-            <li><a href="#">Fess</a></li> 
-            <li><a href="#">Support</a></li> 
-            <li><a href="#">Trading Guide</a></li> 
+            <li><a href="#">Charts</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Fess</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Trading Guide</a></li>
             <li><a href="#">API</a></li>
             <li><a href="#">PGP Key</a></li>
             <li><a href="#">Audit</a></li>
-            <li><a href="#">Bug Bounty</a></li>    
+            <li><a href="#">Bug Bounty</a></li>
           </ul>
         </div>
         <div class="page-footer__column">
