--- a/assets/templates/test/css/media.css
+++ b/assets/templates/test/css/media.css
@@ -3,30 +3,34 @@
   .container {
     width: 95%;
   }
-  
+
   /*Вторая секция*/
   .read {
-    min-height: 430px;
+    min-height: 440px;
   }
-  
+
+  /*.read__more--link1 {
+    margin-bottom: 25px;
+  }
+
   .read__more--link2 {
-    margin-bottom: 85px;
+    margin-bottom: 60px;
   }
-  
+
   .read__more--link3 {
-    margin-bottom: 102px;
-  }
-  
+    margin-bottom: 95px;
+  }*/
+
   /*Пре-футер*/
   .pre-footer h2 {
     width: auto;
   }
-  
+
   /*Пятая секция*/
   .graph {
     display: none;
   }
-  
+
   .page-footer__flex-container {
     flex-wrap: wrap;
   }
@@ -37,37 +41,45 @@
   .container {
     width: 95%;
   }
-  
+
   .page-header__logo-full {
     display: none;
   }
-  
+
   .page-header__logo-s {
     display: block;
   }
-  
+
   /*Вторая секция*/
   .read {
-    min-height: 500px;
+    min-height: 440px;
   }
-  
+
+  /*.read__more--link1 {
+    margin-bottom: 30px;
+  }
+
   .read__more--link2 {
-    margin-bottom: 45px;
+    margin-bottom: 65px;
   }
-  
+
   .read__more--link3 {
-    margin-bottom: 125px;
-  }
-  
+    margin-bottom: 100px;
+  }*/
+
   /*Третья секция*/
   .adv__box b {
     font-size: 20px;
   }
-  
+
   .adv__box p {
     font-size: 18px;
   }
-  
+
+  /*.adv__flex-container {
+    flex-wrap: wrap;
+  }*/
+
   .coin__box--ripple,
   .coin__box--monero {
     display: none;
@@ -79,37 +91,89 @@
   .page-header__logo-s {
     width: 400px;
   }
-  
+
   /*Вторая секция*/
   .read {
-    min-height: 600px;
+    min-height: 500px;
   }
-  
-  .read__more--link2 {
+
+  /*.read__more--link2 {
     margin-bottom: 125px;
   }
-  
+
   .read__more--link3 {
     margin-bottom: 162px;
-  }
-  
+  }*/
+
   .read__more b {
-    font-size: 32px;
+    font-size: 25px;
   }
-  
+
   /*Третья секция*/
   .adv {
     min-height: 420px;
   }
-  
+
   /*Пятая секция*/
   .coin__box span, p {
-    font-size: 22px;
+    font-size: 20px;
   }
-  
+
   /*Пре-футер*/
   .pre-footer h2 {
-    font-size: 30px;
+    font-size: 20px;
+  }
+}
+
+@media only screen and (min-width : 320px) and (max-width : 568px) {
+  .page-header__logo-s {
+    display: none;
+  }
+
+  .info {
+    min-height: 600px;
+  }
+
+  .read__flex-container {
+    flex-direction: column;
+  }
+
+  .read {
+    min-height: 920px;
+  }
+
+  .read__more {
+    width: 100%;
+  }
+
+  .read__more {
+    margin-bottom: 60px;
+  }
+
+  .adv__flex-container {
+    flex-direction: column;
+  }
+
+  .adv {
+    min-height: 1540px;
+  }
+
+  .adv__box {
+    margin: auto;
+    margin-top: 40px;
+  }
+
+  .trading,
+  .coin {
+    display: none;
+  }
+
+  .fly {
+    min-height: 700px;
+  }
+
+  .pre-footer h2 {
+    font-size: 20px;
   }
 }
 
@@ -118,165 +182,125 @@
   .page-header__logo-s {
     display: none;
   }
-  
-  /*Вторая секция*/
+
   .info {
-    min-height: 777px;
+    min-height: 550px;
   }
-  
+
+  /*Вторая секция*/
   .info__link {
-    padding: 20px 50px;
-    font-size: 25px;
+    font-size: 18px;
   }
-  
+
   /*Третья секция*/
   .read__flex-container {
     display: flex;
     flex-direction: column;
   }
-  
+
   .read__more {
     width: 100%;
     height: auto;
   }
-  
+
   .read {
     min-height: 1050px;
   }
-  
+
   .read__more--pb {
     margin-bottom: 40px;
   }
-  
+
   .read__more--link2 {
     margin-bottom: 30px;
   }
-  
+
   .read__more--link3 {
     margin-bottom: 30px;
   }
-  
+
   /*Четвертая секция*/
   .adv__flex-container {
     display: flex;
     flex-direction: column;
   }
-  
+
   .adv {
     min-height: 1590px;
   }
-  
+
   .adv__box {
     margin: 0 auto;
     margin-top: 40px;
   }
-  
+
   /*Скрываем секции*/
   .trading,
   .coin {
     display: none;
   }
-  
+
   /*Пятая секция*/
   .fly {
     min-height: 840px;
   }
-  
+
   .fly__desc {
     font-size: 20px;
   }
-  
+
   /*Шестая секция*/
   .pre-footer h2 {
-    font-size: 25px;
+    padding-top: 30px;
+    font-size: 18px;
   }
 }
 
-@media only screen and (min-width : 320px) and (max-width : 568px) {  
-  .page-header__logo-s {
-    display: none;
-  }
-  
-  .info {
-    min-height: 820px;
-  }
-  
-  .read__flex-container {
-    flex-direction: column;
-  }
-  
-  .read__more {
-    margin-bottom: 40px;
-  }
-  
-  .read__more--link2,
-  .read__more--link3 {
-    margin-bottom: 30px;
-  }
-  
-  .adv__flex-container {
-    flex-direction: column;
-  }
-  
-  .adv {
-    min-height: 1600px;
-  }
-  
-  .adv__box {
-    margin: auto;
-    margin-top: 40px;
-  }
-  
-  .trading,
-  .coin {
-    display: none;
-  }
-  
-  .fly {
-    min-height: 900px;
-  }
-  
-  .pre-footer h2 {
-    font-size: 20px;
-  }
-}
-
-@media only screen and (max-width : 320px) {  
+@media only screen and (max-width : 320px) {
   .page-header__flex-container {
     justify-content: flex-end;
   }
-  
+
+  .container {
+    width: 90%;
+  }
+
   .info {
     min-height: 600px;
   }
-  
+
   .info__link {
-    padding: 20px 20px;
     font-size: 20px;
   }
-  
+
   .info__title {
     font-size: 30px;
   }
-  
+
   .info__text {
     font-size: 20px;
   }
-  
+
   .read__more {
-    width: 100%;
+    width: 90%;
+    margin-bottom: 40px;
     height: auto;
   }
-  
+
   .read {
-    min-height: 1250px;
+    min-height: 1270px;
   }
-  
+
+  .adv {
+    min-height: 1540px;
+  }
+
   .fly {
-    min-height: 1000px;
+    min-height: 930px;
   }
-  
+
   .pre-footer h2 {
-    font-size: 20px;
+    padding-top: 30px;
+    font-size: 18px;
   }
 }
