--- a/assets/templates/test/index.html
+++ b/assets/templates/test/index.html
@@ -25,7 +25,7 @@
             <ul class="main-nav__list">
               <li class="main-nav__item"><a href="#">LOGIN</a></li>
               <li class="main-nav__item"><a href="#">CONTACTS</a></li>
-              <li class="main-nav__item"><a href="#">LOGIN</a></li>
+              <li class="main-nav__item"><a href="#">LOG UP</a></li>
             </ul>
           </nav>
         </div>
