--- a/assets/templates/test/css/style.css
+++ b/assets/templates/test/css/style.css
@@ -67,7 +67,7 @@ body {
 .info__text {
   padding-top: 25px;
   padding-left: 20px;
-  margin-bottom: 80px;
+  margin-bottom: 60px;
   color: #fff;
   font-size: 20px;
   opacity: 0.4;
@@ -76,11 +76,11 @@ body {
 
 .info__link {
   color: #000;
-  padding: 5px 40px;
+  padding: 10px 50px;
   margin-left: 20px;
   background: #bfa75f;
   border-radius: 50px;
-  font-size: 20px;
+  font-size: 30px;
   font-weight: bold;
   text-transform: uppercase;
   text-decoration: none;
@@ -98,7 +98,7 @@ body {
 }
 
 .read {
-  min-height: 450px;
+  min-height: 300px;
   background: #bfa75f;
 }
 
@@ -231,6 +231,7 @@ body {
 }
 
 .info__link--red {
+  margin-top: -40px;
   color: #fff;
   background: #8a0000;
 }
@@ -396,4 +397,10 @@ body {
   margin-top: 20px;
   padding: 5px;
   width: 200px;
+}
+
+.hide-1,
+.hide-2,
+.hide-3 {
+  display: none;
 }
