--- a/assets/templates/test/css/media.css
+++ b/assets/templates/test/css/media.css
@@ -6,7 +6,7 @@
 
   /*Вторая секция*/
   .read {
-    min-height: 440px;
+    min-height: 300px;
   }
 
   /*.read__more--link1 {
@@ -20,6 +20,19 @@
   .read__more--link3 {
     margin-bottom: 95px;
   }*/
+
+  .trading {
+    min-height: 700px;
+    margin-top: -50px;
+  }
+
+  .trading__title {
+    padding-top: 120px;
+  }
+
+  .trading__text {
+    padding-top: 10px;
+  }
 
   /*Пре-футер*/
   .pre-footer h2 {
@@ -52,7 +65,11 @@
 
   /*Вторая секция*/
   .read {
-    min-height: 440px;
+    min-height: 300px;
+  }
+
+  .trading__title {
+    padding-top: 130px;
   }
 
   /*.read__more--link1 {
@@ -94,7 +111,7 @@
 
   /*Вторая секция*/
   .read {
-    min-height: 500px;
+    min-height: 270px;
   }
 
   /*.read__more--link2 {
@@ -109,9 +126,28 @@
     font-size: 25px;
   }
 
+  .read__more p {
+    font-size: 13px;
+  }
+
   /*Третья секция*/
   .adv {
     min-height: 420px;
+  }
+
+  .trading {
+    min-height: 650px;
+    margin-top: -100px;
+  }
+
+  .trading__title {
+    font-size: 40px;
+    padding-top: 160px;
+  }
+
+  .trading__text {
+    width: 300px;
+    font-size: 16px;
   }
 
   /*Пятая секция*/
@@ -139,7 +175,7 @@
   }
 
   .read {
-    min-height: 920px;
+    min-height: 690px;
   }
 
   .read__more {
