--- a/assets/templates/test/css/style.css
+++ b/assets/templates/test/css/style.css
@@ -153,17 +153,17 @@ body {
 /*Третья секция*/
 .adv__flex-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .adv {
-  min-height: 400px;
+  min-height: 380px;
 }
 
 .adv__box {
   width: 250px;
   margin-top: 80px;
-  padding-top: 150px;
+  padding-top: 120px;
   text-align: center;
 }
 
@@ -207,7 +207,7 @@ body {
 .trading {
   min-height: 885px;
   background: url("../img/mac.png") no-repeat center;
-  background-size: cover;
+  background-size: contain;
 }
 
 .trading__title {
@@ -251,7 +251,7 @@ body {
 /*Шестая секция*/
 .coin__flex-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .coin {
@@ -260,12 +260,12 @@ body {
 }
 
 .coin__box {
-  width: 150px;
-  padding-top: 80px;
+  width: 100px;
+  padding-top: 70px;
   margin-top: 30px;
   text-align: center;
   text-transform: uppercase;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: bold;
 }
 
