--- a/assets/templates/test/css/media.css
+++ b/assets/templates/test/css/media.css
@@ -166,6 +166,10 @@
     display: none;
   }
 
+  .page-header {
+    background: red;
+  }
+
   .info {
     min-height: 600px;
   }
@@ -175,7 +179,7 @@
   }
 
   .read {
-    min-height: 690px;
+    min-height: 650px;
   }
 
   .read__more {
@@ -191,7 +195,7 @@
   }
 
   .adv {
-    min-height: 1540px;
+    min-height: 1400px;
   }
 
   .adv__box {
@@ -240,12 +244,13 @@
   }
 
   .read {
-    min-height: 1050px;
+    min-height: 690px;
   }
 
-  .read__more--pb {
+  /*.read__more--pb {
     margin-bottom: 40px;
   }
+
 
   .read__more--link2 {
     margin-bottom: 30px;
@@ -253,7 +258,7 @@
 
   .read__more--link3 {
     margin-bottom: 30px;
-  }
+  }*/
 
   /*Четвертая секция*/
   .adv__flex-container {
@@ -262,7 +267,7 @@
   }
 
   .adv {
-    min-height: 1590px;
+    min-height: 1400px;
   }
 
   .adv__box {
@@ -278,7 +283,7 @@
 
   /*Пятая секция*/
   .fly {
-    min-height: 840px;
+    min-height: 700px;
   }
 
   .fly__desc {
@@ -324,11 +329,11 @@
   }
 
   .read {
-    min-height: 1270px;
+    min-height: 740px;
   }
 
   .adv {
-    min-height: 1540px;
+    min-height: 1400px;
   }
 
   .fly {
