--- a/assets/templates/test/index.html
+++ b/assets/templates/test/index.html
@@ -80,7 +80,7 @@
           <p>get a demo account to practice and learn trading skills</p>
         </div>
         <div class="adv__box  adv__box--img5">
-          <b>customizable interface</b>
+          <b>Customizable interface</b>
           <p>setting your own algorithmic trading bots to give you a unique trading experience</p>
         </div>
       </div>
