--- a/assets/templates/test/index.html
+++ b/assets/templates/test/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,7 +36,7 @@
     <div class="container">
       <h1 class="info__title">Cryptologic the science of<br>trading cryptocurrency</h1>
       <p class="info__text">Cryptologic offers investors the opportunity<br>to trade multiple crypto currencies<br>against the euro and the US dollar<br>on a 24/7 basis</p>
-      <a class="info__link" href="#">Create Account</a>
+      <a class="info__link" href="form.html">Create Account</a>
     </div>
   </section>
   <section class="read">
@@ -93,7 +93,7 @@
         <p class="trading__text">Cryptologic provides the possibility to trade Bitcoin or any other digital currency from your pc, tablet or mobile device. This is as a result of our multifaceted design interface. You can follow the market trends and get interesting live updates on the go. On here you can manage your portfolio wherever you are. Trade today with cryptologic and move on the path to success.</p>
       </div>
       <div class="trading__flex-container  trading__flex-container--m">
-        <a class="info__link  info__link--red" href="#">Create Account</a>
+        <a class="info__link  info__link--red" href="form.html">Create Account</a>
       </div>
     </div>
   </section>
