--- a/assets/templates/test/css/style.css
+++ b/assets/templates/test/css/style.css
@@ -404,3 +404,48 @@ body {
 .hide-3 {
   display: none;
 }
+
+/*Login*/
+.form__body {
+  background: #888e96;
+}
+
+.login {
+  width: 300px;
+  /*height: 400px;*/
+  margin: 0 auto;
+  margin-top: 200px;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+  background: #fff;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin: 0 auto;
+  margin-top: 60px;
+}
+
+form input {
+  outline: none;
+  padding: 10px;
+  border: none;
+  font-size: 20px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #888e96;
+}
+
+form button {
+  margin-top: 40px;
+  border: none;
+  color: #000;
+  padding: 10px 0;
+  border-radius: 5px;
+  text-transform: uppercase;
+  font-size: 18px;
+  background: #bfa75f;
+  cursor: pointer;
+}
