--- a/assets/templates/test/css/style.css
+++ b/assets/templates/test/css/style.css
@@ -406,6 +406,21 @@ body {
 }
 
 /*Login*/
+.modal-login h1 {
+  text-align: center;
+  font-size: 50px;
+}
+
+h1 a {
+  text-decoration: none;
+  color: #fff;
+  transition: 0.3s;
+}
+
+h1 a:hover {
+  color: #bfa75f;
+}
+
 .form__body {
   background: #888e96;
 }
@@ -414,35 +429,47 @@ body {
   width: 300px;
   /*height: 400px;*/
   margin: 0 auto;
-  margin-top: 200px;
-  padding: 20px;
+  margin-top: 100px;
+  padding: 40px;
   border-radius: 5px;
-  text-align: center;
   background: #fff;
+}
+
+.login h2 {
+  text-align: center;
 }
 
 form {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  flex-wrap: wrap;
   text-align: center;
   margin: 0 auto;
   margin-top: 60px;
 }
 
+form label {
+  padding-left: 10px;
+  font-size: 18px;
+  font-weight: bold;
+  color: #000;
+}
+
 form input {
+  width: 100%;
   outline: none;
   padding: 10px;
   border: none;
   font-size: 20px;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   border-bottom: 1px solid #888e96;
 }
 
 form button {
-  margin-top: 40px;
   border: none;
   color: #000;
-  padding: 10px 0;
+  margin: auto;
+  padding: 10px 30px;
   border-radius: 5px;
   text-transform: uppercase;
   font-size: 18px;
