--- a/assets/templates/test/form.html
+++ b/assets/templates/test/form.html
@@ -12,11 +12,16 @@
 <body class="form__body">
   <section class="modal-login">
     <div class="container">
+      <h1><a href="index.html">CryptoLogic</a></h1>
       <div class="login">
         <h2>Sign up to CryptoLogic</h2>
         <form class="form  modal-login__form" action="index.html" method="post">
-          <input class="modal-login__user" type="email" name="email" placeholder="Email">
-          <input class="modal-login__password" type="password" name="password" placeholder="Password">
+          <label for="name">Name</label>
+          <input type="text" name="Name" id="name" placeholder="First name / Last name">
+          <label for="email">Email</label>
+          <input class="modal-login__user" type="email" name="email" id="email" placeholder="you@example.com">
+          <label for="pass">Password</label>
+          <input class="modal-login__password" type="password" name="password" placeholder="********">
           <button class="form__btn  modal-login__enter  btn" type="submit" name="button">Create Account</button>
         </form>
       </div>
