--- a/assets/templates/test/css/media.css
+++ b/assets/templates/test/css/media.css
@@ -1,3 +1,17 @@
+@media only screen and (min-width : 1500px) {
+  .trading__title {
+    padding-top: 20px;
+    font-size: 60px;
+  }
+}
+
+@media only screen and (min-width : 1201px) {
+  .trading__title {
+    padding-top: 170px;
+    font-size: 60px;
+  }
+}
+
 @media only screen and (max-width : 1200px) {
   /*Общие*/
   .container {
@@ -339,5 +353,9 @@
   .pre-footer h2 {
     padding-top: 30px;
     font-size: 18px;
+  }
+
+  .login {
+    width: 70%;
   }
 }
