--- a/assets/templates/test/index.html
+++ b/assets/templates/test/index.html
@@ -35,7 +35,7 @@
   <section class="info">
     <div class="container">
       <h1 class="info__title">Cryptologic the science of<br>trading cryptocurrency</h1>
-      <p class="info__text">Cryptologic offers investors the opportunity<br>to trade multiple crypto currencies<br>against the euro and the US dollar<br>on a 24/7 basis</p>
+      <p class="info__text">Cryptologic presents investors a unique opportunity<br>to trade or exchange digital assets<br>with ease on a 24/7 basic.</p>
       <a class="info__link" href="form.html">Create Account</a>
     </div>
   </section>
