--- a/assets/templates/test/form.html
+++ b/assets/templates/test/form.html
@@ -14,14 +14,22 @@
     <div class="container">
       <h1><a href="index.html">CryptoLogic</a></h1>
       <div class="login">
-        <h2>Sign up to CryptoLogic</h2>
+        <h2>Sign up to <span>CryptoLogic</span></h2>
         <form class="form  modal-login__form" action="index.html" method="post">
-          <label for="name">Name</label>
-          <input type="text" name="Name" id="name" placeholder="First name / Last name">
-          <label for="email">Email</label>
-          <input class="modal-login__user" type="email" name="email" id="email" placeholder="you@example.com">
-          <label for="pass">Password</label>
-          <input class="modal-login__password" type="password" name="password" placeholder="********">
+          <div class="form__name">
+            <label for="name">Name</label>
+            <input type="text" name="FirstName" id="name" placeholder="First Name">
+            <hr>
+            <input type="text" name="LastName" id="name" placeholder="Last Name">
+          </div>
+          <div class="form__email">
+            <label for="email">Email</label>
+            <input class="modal-login__user" type="email" name="email" id="email" placeholder="you@example.com">
+          </div>
+          <div class="form__password">
+            <label for="pass">Password</label>
+            <input class="modal-login__password" type="password" name="password" id="pass" placeholder="********">
+          </div>
           <button class="form__btn  modal-login__enter  btn" type="submit" name="button">Create Account</button>
         </form>
       </div>
