--- a/assets/templates/test/form.html
+++ b/assets/templates/test/form.html
@@ -15,6 +15,9 @@
       <h1><a href="index.html">CryptoLogic</a></h1>
       <div class="login">
         <h2>Sign up to <span>CryptoLogic</span></h2>
+        <div class="form__sign">
+          <p>Sign up</p>
+        </div>
         <form class="form  modal-login__form" action="index.html" method="post">
           <div class="form__name">
             <label for="name">Name</label>
@@ -29,6 +32,10 @@
           <div class="form__password">
             <label for="pass">Password</label>
             <input class="modal-login__password" type="password" name="password" id="pass" placeholder="********">
+          </div>
+          <div class="form__check">
+            <label for="check">I certify that I am 18 years of age or older, and I agree to the User Agreement and Privacy Policy.</label>
+            <input type="checkbox" id="check">
           </div>
           <button class="form__btn  modal-login__enter  btn" type="submit" name="button">Create Account</button>
         </form>
