--- a/assets/templates/test/form.html
+++ b/assets/templates/test/form.html
@@ -38,6 +38,7 @@
             <input type="checkbox" id="check">
           </div>
           <button class="form__btn  modal-login__enter  btn" type="submit" name="button">Create Account</button>
+          <p class="form__have">Already have an account? <a href="#">Sign In</a></p>
         </form>
       </div>
     </div>
