--- a/assets/templates/test/css/style.css
+++ b/assets/templates/test/css/style.css
@@ -487,7 +487,9 @@ h1 a:hover {
 
 .form__have {
   margin-top: 20px;
+  font-size: 14px;
   font-weight: bold;
+  color: gray;
   text-align: center;
   opacity: 0.8;
 }
