--- a/assets/templates/test/css/media.css
+++ b/assets/templates/test/css/media.css
@@ -355,10 +355,13 @@
   }
 
   .info__title {
+    text-align: center;
     font-size: 30px;
   }
 
   .info__text {
+    padding-left: 0;
+    text-align: center;
     font-size: 20px;
   }
 
