--- a/assets/templates/test/css/media.css
+++ b/assets/templates/test/css/media.css
@@ -234,6 +234,20 @@
   .login {
     margin-bottom: 50px;
   }
+
+  /*Form*/
+  .form__body .container {
+    width: 75%;
+  }
+
+  .login {
+    width: 85%;
+    margin: 0 auto;
+  }
+
+  .form__check input {
+    left: -240px;
+  }
 }
 
 @media only screen and (min-width : 320px) and (max-width : 568px) {
@@ -295,6 +309,21 @@
 
   .pre-footer h2 {
     font-size: 20px;
+  }
+
+  /*Form*/
+  .form__body .container {
+    width: 100%;
+  }
+
+  .login {
+    width: 85%;
+    margin: 0 auto;
+  }
+
+  .form__check input {
+    top: 2px;
+    left: -180px;
   }
 }
 
@@ -363,6 +392,38 @@
     padding-top: 30px;
     font-size: 18px;
   }
+
+  /*Form*/
+  .form__body .container {
+    width: 100%;
+  }
+
+  .login {
+    width: 85%;
+    margin: 0 auto;
+  }
+}
+
+@media only screen and (max-width : 376px) {
+  input::placeholder {
+
+  }
+
+  form label {
+    margin-right: 0;
+  }
+
+  form input {
+    margin-left: 0;
+  }
+
+  .modal-login__password {
+    margin-left: 0;
+  }
+
+  .form__check input {
+    left: -140px;
+  }
 }
 
 @media only screen and (max-width : 320px) {
@@ -420,8 +481,10 @@
     font-size: 18px;
   }
 
+  /*Form*/
   .login {
-    width: 70%;
+    width: 85%;
+    margin-bottom: 40px;
   }
 
   form button {
@@ -429,7 +492,7 @@
   }
 
   .form__body .container {
-    width: 100%;
+    width: 90%;
   }
 
   form hr {
