--- a/assets/templates/test/css/style.css
+++ b/assets/templates/test/css/style.css
@@ -428,10 +428,10 @@ body {
 }
 
 .login {
-  width: 450px;
+  width: 100%;
   /*height: 400px;*/
-  margin: 0 auto;
-  margin-top: 0;
+  /*margin: 0 auto;*/
+  /*margin-top: 0;*/
   margin-bottom: 50px;
   padding: 20px;
   border-radius: 5px;
@@ -447,19 +447,6 @@ body {
 
 .login h2 span {
   font-weight: bold;
-}
-
-.form__sign {
-  padding: 1px 0;
-  padding-left: 30px;
-  margin-bottom: 0;
-  color: #fff;
-  font-size: 13px;
-  font-weight: bold;
-  letter-spacing: 3px;
-  background: #bfa75f;
-  border-radius: 5px;
-  text-transform: uppercase;
 }
 
 .form__name,
@@ -478,7 +465,7 @@ body {
 .form__check input {
   position: absolute;
   top: 2px;
-  left: -225px;
+  left: -250px;
 }
 
 .form__check label {
@@ -514,7 +501,6 @@ form hr {
 }
 
 input::placeholder {
-  /*text-align: center;*/
   opacity: 0.7;
 }
 
@@ -522,8 +508,8 @@ form {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 0 auto;
-  margin-top: 20px;
+  /*margin: 0 auto;*/
+  /*margin-top: 20px;*/
 }
 
 form label {
