--- a/assets/templates/test/index.html
+++ b/assets/templates/test/index.html
@@ -35,9 +35,11 @@
   <section class="info">
     <div class="container">
       <div class="container__adv">
-        <h1 class="info__title">Cryptologic the science of<br>trading cryptocurrency</h1>
-        <p class="info__text">Cryptologic presents investors a unique opportunity<br>to trade or exchange digital assets<br>with ease on a 24/7 basic.</p>
-        <a class="info__link" href="form.html">Create Account</a>
+        <div class="flex-btn">
+          <h1 class="info__title">Cryptologic the science of<br>trading cryptocurrency</h1>
+          <p class="info__text">Cryptologic presents investors a unique opportunity<br>to trade or exchange digital assets<br>with ease on a 24/7 basic.</p>
+          <a class="info__link" href="form.html">Create Account</a>
+        </div>
       </div>
     </div>
   </section>
