--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -7,6 +7,25 @@
   <title>CryptoLogic</title>
 </head>
 <body>
-
+  <header class="page-header">
+    <nav class="page-header__nav">
+      <div class="container">
+        <div class="page-header__flex">
+          <div class="page-header__logo">
+            <a href="#">
+              <img src="" alt="">
+            </a>
+          </div>
+          <div class="page-header__main-nav">
+            <ul class="page-header__nav-list">
+              <li class="page-header__item"><a href="#"></a></li>
+              <li class="page-header__item"><a href="#"></a></li>
+              <li class="page-header__item"><a href="#"></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </header>
 </body>
 </html>
