--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -18,7 +18,7 @@
           </div>
           <div class="page-header__main-nav">
             <ul class="page-header__nav-list">
-              <li class="page-header__item"><a href="#"></a></li>
+              <li class="page-header__item"><a href="#">rthrth</a></li>
               <li class="page-header__item"><a href="#"></a></li>
               <li class="page-header__item"><a href="#"></a></li>
             </ul>
